--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <title>Jamendo API with AngularJS</title>
   <link href="http://fonts.googleapis.com/css?family=Cantora+One" rel="stylesheet" type="text/css">
-  <link href="normalize.css" rel="stylesheet" type="text/css">
-  <link href="grid.css" rel="stylesheet" type="text/css">
-  <link href="style.css" rel="stylesheet" type="text/css">
+  <link href="css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="css/grid.css" rel="stylesheet" type="text/css">
+  <link href="css/style.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js" type="text/javascript"></script>
   <script src="https://rawgithub.com/angular-ui/bootstrap/gh-pages/ui-bootstrap-tpls-0.6.0.min.js" type="text/javascript"></script>
   <script src="Album.js" type="text/javascript"></script>
