--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <link href="css/grid.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js" type="text/javascript"></script>
-  <script src="https://rawgithub.com/angular-ui/bootstrap/gh-pages/ui-bootstrap-tpls-0.6.0.min.js" type="text/javascript"></script>
-  <script src="Album.js" type="text/javascript"></script>
+  <script src="controllers/Album.js" type="text/javascript"></script>
 </head>
   <body ng-controller="Album">
     <div class="container">
