Added latest version of Angular and added ng-if

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/grid.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js" type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.2/angular.min.js" type="text/javascript"></script>
   <script src="app.js" type="text/javascript"></script>
   <script src="controllers/Album.js" type="text/javascript"></script>
 </head>
@@ -16,12 +16,12 @@
 
       <input id="artist" type="text" placeholder="Enter artist name" ng-model="artist">
       <button ng-click="getAlbums()">Get Albums</button><br/><br/>
-      <div>
+      <div id="albums" ng-repeat="album in albums">
+        <div ng-if="albums.length > 0">
         <h2>Album Info</h2>
-        <div id="albums" ng-repeat="album in albums">        
             {{album.name}}<br/>
             <img src="{{album.image}}">
-        </div>  
+        </div>
       </div>
     </div>
   </body>
