--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.2/angular.min.js" type="text/javascript"></script>
   <script src="app.js" type="text/javascript"></script>
-  <script src="services/albumsService.js" type="text/javascript"></script>
-  <script src="controllers/Album.js" type="text/javascript"></script>
+  <script src="controllers/AlbumController.js" type="text/javascript"></script>
 </head>
-  <body ng-controller="Album">
+  <body ng-controller="AlbumController">
     <div class="container">
       <h1>Jamendo Artist Search</h1>
 
