--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.2/angular.min.js" type="text/javascript"></script>
   <script src="app.js" type="text/javascript"></script>
+  <script src="services/albumsService.js" type="text/javascript"></script>
   <script src="controllers/AlbumController.js" type="text/javascript"></script>
 </head>
   <body ng-controller="AlbumController">
