--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0-rc.2/angular.min.js" type="text/javascript"></script>
   <script src="app.js" type="text/javascript"></script>
+  <script src="controllers/AlbumController.js" type="text/javascript"></script>
+  <script src="services/albumsService.js" type="text/javascript"></script>
 </head>
   <body ng-controller="AlbumController">
     <div class="container">
@@ -18,6 +20,7 @@
       <h2>Album Info</h2>
       <div id="albums" ng-repeat="album in albums">
         {{album.name}}<br/>
+        <img ng-src="{{album.image}}">
       </div>
     </div>
   </body>
